fixed theme issues and mobile view

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,18 +1,13 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-html {
-  scroll-behavior: smooth;
+  /* Set static background and foreground colors */
+  --background: #0a0a0a; 
+  --foreground: #ededed;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+  scroll-behavior: smooth;
 }
 
 body {
